welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:4: error: reassignment to val
  c=getCouleurSol()
   ^SlugSnail:31: error: not found: value c
  c=getCouleurSol()
  ^SlugSnail:36: error: not found: value c
    if (getCouleurSol()==c) {
                         ^